// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCurrentFormInitialValues returns the current form's inital values converted to javascript 1`] = `
Object {
  "mockProperty": "mock value",
}
`;

exports[`isFormInvalid correctly calls redux-form's 'isInvalid' method 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock current entity form id",
    ],
  ],
}
`;

exports[`isFormPristine correctly calls redux-form's 'isPristine' method 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "mock current entity form id",
    ],
  ],
}
`;

exports[`selectFormInitialValues returns immutable map {active: true} when getSelectedEntity is undefined 1`] = `
Immutable.Map {
  "active": true,
}
`;

exports[`selectFormInitialValues returns new map {active: true} when getSelectedEntityId equals bulk 1`] = `Immutable.Map {}`;

exports[`selectFormInitialValues returns the selected entity when not undefined or create 1`] = `
Immutable.Map {
  "id": "mockId",
  "name": "mockName",
}
`;

exports[`selectFormInitialValues returns the selected entity when not undefined or create and has "active" key 1`] = `
Immutable.Map {
  "id": "mockId",
  "name": "mockName",
  "active": true,
}
`;
